--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
             <a href="./bootstrap/task6.html" target="_blank">Task6 of BS</a><br>
 
         </div>
+
+        <!--Javascript Tasks-->
+        <div class="tasks">
+            <h3>Javascript Tasks</h3>
+            <a href="./js/jstask1.html" target="_blank">Task1 of JS</a><br>
+            <a href="./js/jstask2.html" target="_blank">Task2 of JS</a><br>
+            <a href="./js/jstask3.html" target="_blank">Task3 of JS</a><br>
+            <a href="./js/jstask4.html" target="_blank">Task4 of JS</a><br>
+            <a href="./js/jstask5.html" target="_blank">Task5 of JS</a><br>
+            <a href="./js/jstask6.html" target="_blank">Task6 of JS</a><br>
+            <a href="./js/jstask7.html" target="_blank">Task7 of JS</a><br>
+            <a href="./js/jstask8.html" target="_blank">Task8 of JS</a><br>
+            <a href="./js/jstask9/index.html" target="_blank">Task9 of JS</a><br>
+        </div>
     </div>
 
 </body>
